--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img/a.png"
+    <link rel="icon" type="image/x-icon" href="a.png"
     <title>Project Mini</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="img/style.css"
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <header>
         <div class="profile-container">
-            <img src="img/585.png" alt="Foto profil" title="Go Green">
+            <img src="585.png" alt="Foto profil" title="Go Green">
         </div>
         <h1>Aldi Mini Project</h1>
         <p>Belajar programing dirumah</p>
@@ -36,7 +36,7 @@
         <a href="https://progate.com" target="_blank" title="Progate"></a>
     </footer>
 
-    <script src="img/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
